--- a/FE/readme/package.json
+++ b/FE/readme/package.json
@@ -17,6 +17,7 @@
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
     "vue": "^2.6.12",
+    "vue-carousel": "^0.18.0",
     "vue-router": "^3.2.0",
     "vuetify": "^2.4.0"
   },
