--- a/FE/readme/package.json
+++ b/FE/readme/package.json
@@ -16,6 +16,7 @@
     "bootstrap": "^4.6.0",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
+    "jwt-decode": "^3.1.2",
     "vue": "^2.6.12",
     "vue-carousel": "^0.18.0",
     "vue-router": "^3.2.0",
