--- a/bigdata/requirements.txt
+++ b/bigdata/requirements.txt
@@ -13,6 +13,7 @@ MarkupSafe==1.1.1
 matplotlib==3.1.2
 numpy==1.17.3
 pandas==0.25.3
+PyMySQL==1.0.2
 pyparsing==2.4.5
 python-dateutil==2.8.1
 pytz==2019.3
